# gscrc

./: Cargo.toml
src/: main.rs
