[package]
name = "gscrc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
binrw = "0.14.1"
clap = { version = "4.5.29", features = ["derive"] }
clap-num = "1.2.0"
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.11"

[features]
7105 = []
default = ["7105"]
